--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
                 <div class="card" id="card2">
                     <div class="overlay">
-                        <h4>ADVENTURE</h4>
+                        <h4>ADVENTURE GOLF</h4>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque quos illo dolore ut facilis corrupti praesentium deleniti voluptatem minima impedit.</p>
                     </div>
                 </div>
